# calthing

./: README.md
android/: settings.gradle.kts
android/app/: .gitignore  build.gradle.kts
android/app/src/androidTest/java/me/marti/calprovexample/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/me/marti/calprovexample/: CalendarBroadcastReceiver.kt  CalendarSyncing.kt  DavSyncRs.kt  MutableMapList.kt  UserPreferences.kt  import.kt  utils.kt
android/app/src/main/java/me/marti/calprovexample/calendar/: Actions.kt  Calendar.kt  Projections.kt
android/app/src/main/java/me/marti/calprovexample/jni/: DavSyncRs.kt  DavSyncRsHelpers.java  RustPanic.java
android/app/src/main/java/me/marti/calprovexample/syncAdapter/: Stubs.kt
android/app/src/main/java/me/marti/calprovexample/ui/: Actions.kt  CalendarPermission.kt  Composables.kt  Debug.kt  MainActivity.kt  (+3 more)
android/app/src/main/res/drawable/: outline_sync_24.xml  rounded_calendar_add_on_24.xml  rounded_sync_problem_24.xml
android/app/src/main/res/layout/: main_layout.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: authenticator.xml
android/app/src/test/java/me/marti/calprovexample/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
rust/: .gitignore  Android.mk  Cargo.toml  README.md  build.rs  build.sh
rust/.cargo/: config.toml  config.toml.in
rust/src/: fs.rs  lib.rs  log.rs  types.rs  utils.rs
rust/src/calendar/: mod.rs
rust/src/classes/: Cargo.toml  fs.rs  lib.rs
(+3 files in other folders)
