[package]
name = "davsync-binding"
version = "0.1.0"
edition = "2021"

[lib]
name = "davsync"
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
davsync = { path = "/home/marti/source/davsync" }
libc = "0.2.155"

# used in build.rs script
[build-dependencies]
toml = "0.8.8"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21", default-features = false }

[profile.release]
opt-level = "s"
debug = 0
strip = "symbols"

