[package]
name = "davsync-binding"
version = "0.1.0"
edition = "2021"

[lib]
name = "davsync"
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["src/classes"]

[workspace.dependencies]
ez_jni = "0.5.4"
jni = { version = "0.21.1", default-features = false }
mime_guess = "2.0.5"

[dependencies]
ez_jni = { workspace = true }
jni = { workspace = true }
classes = { path = "./src/classes" }

# used in build.rs script
[build-dependencies]
toml = "0.8.8"

[profile.release]
opt-level = "s"
debug = 0
strip = "symbols"
